Removed image source files

--- a/app/about/index.html
+++ b/app/about/index.html
@@ -32,22 +32,26 @@
             <div class="powered-by-wrap"><span class="powered-by">powered by</span><img src="../images/logos/mashwork-logo-white-red.svg" class="mashwork-logo"/></div></a>
         </div>
         <h1 class="site-header">Core Beliefs</h1>
-      </div>
-      <div class="row">
-        <div class="content-box core-beliefs-box context">
-          <div class="icon-circle"><img src="../images/context-icon.svg" class="core-beliefs-illustration"/></div>
-          <h2>Context</h2>
-          <p>Social marketers and researchers are no longer content simply counting mentions: social becomes a powerful insights tool only when we can understand the context of conversations.</p>
-        </div>
-        <div class="content-box core-beliefs-box emotion">
-          <div class="icon-circle"><img src="../images/emotion-icon.svg" class="core-beliefs-illustration"/></div>
-          <h2>Emotion</h2>
-          <p>Canvs layers the emotional graph on top of the social graph to reveal context behind social conversations. We believe that understanding how audiences emotionally relate to content is the first step in building a meaningful relationship with them. </p>
-        </div>
-        <div class="content-box core-beliefs-box nuance">
-          <div class="icon-circle"><img src="../images/nuance-icon.svg" class="core-beliefs-illustration"/></div>
-          <h2>Nuance</h2>
-          <p>Entertainment content is much more complex than the positive, negative, and neutral sentiment other platforms give you. Canvs reveals the complex emotions people express to give you sophisticated insights into your content.</p>
+        <div class="row">
+          <div class="core-beliefs-section">
+            <div class="row">
+              <div class="content-box core-beliefs-box context">
+                <div class="icon-circle"><img src="../images/context-icon.svg" class="core-beliefs-illustration"/></div>
+                <h2>Context</h2>
+                <p>Social marketers and researchers are no longer content simply counting mentions: social becomes a powerful insights tool only when we can understand the context of conversations.</p>
+              </div>
+              <div class="content-box core-beliefs-box emotion">
+                <div class="icon-circle"><img src="../images/emotion-icon.svg" class="core-beliefs-illustration"/></div>
+                <h2>Emotion</h2>
+                <p>Canvs layers the emotional graph on top of the social graph to reveal context behind social conversations. We believe that understanding how audiences emotionally relate to content is the first step in building a meaningful relationship with them. </p>
+              </div>
+              <div class="content-box core-beliefs-box nuance">
+                <div class="icon-circle"><img src="../images/nuance-icon.svg" class="core-beliefs-illustration"/></div>
+                <h2>Nuance</h2>
+                <p>Entertainment content is much more complex than the positive, negative, and neutral sentiment other platforms give you. Canvs reveals the complex emotions people express to give you sophisticated insights into your content.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -102,7 +106,7 @@
       <header class="section-header-wrap">
         <h1 class="section-header">Join Us</h1>
         <p class="section-description">View our current openings.</p>
-      </header><a href="/" class="action-btn apply-now-btn">Apply Now</a>
+      </header><a href="mailto:apply@mashwork.com" target="_blank" class="action-btn apply-now-btn">Apply Now</a>
     </div>
   </section>
 </div>
