Changed video to Canvs vid

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Canvs - Powered by Mashwork</title>
     <meta name="description" content="Canvs is the first platform that automatically and transparently reveals the nuanced emotion around social TV conversation. Canvs was created by Mashwork, a leading social media insights firm.">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=, minimal-ui">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", minimal-ui>
 
     <link rel="stylesheet" href="style/style.css">
 
@@ -119,7 +119,7 @@
 <div class="canvs-video-wrap-container">
   <div class="canvs-video-close">x</div>
   <div class="canvs-video-wrap">
-    <iframe id="canvs-video" src="//player.vimeo.com/video/13209929?api=1&amp;amp;title=0&amp;amp;byline=0&amp;amp;portrait=0&amp;amp;color=30bcae&amp;amp;&amp;player_id=canvs-video" width="1140" height="640" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen" class="canvs-video"></iframe>
+    <iframe id="canvs-video" src="//player.vimeo.com/video/92680334?api=1&amp;amp;title=0&amp;amp;byline=0&amp;amp;portrait=0&amp;amp;color=30bcae&amp;amp;&amp;player_id=canvs-video" width="1140" height="640" frameborder="0" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allowfullscreen="allowfullscreen" class="canvs-video"></iframe>
   </div>
 </div>
     
