--- a/app/about/index.html
+++ b/app/about/index.html
@@ -113,15 +113,15 @@
     
 <footer class="page-footer">
   <ul class="social-links">
-    <li class="twitter-link"><a href="https://www.twitter.com/mashwork" target="_blank"><img src="http://mashwork.com/canvs/images/twitter-icon.svg" class="social-icon"/></a></li>
-    <li class="facebook-link"><a href="https://www.facebook.com/mashwork" target="_blank"><img src="http://mashwork.com/canvs/images/facebook-icon.svg" class="social-icon"/></a></li>
-    <li class="linkedin-link"><a href="https://www.linkedin.com/company/mashwork" target="_blank"><img src="http://mashwork.com/canvs/images/linkedin-icon.svg" class="social-icon"/></a></li>
+    <li class="twitter-link"><a href="https://www.twitter.com/mashwork" target="_blank"><img src="/images/twitter-icon.svg" class="social-icon"/></a></li>
+    <li class="facebook-link"><a href="https://www.facebook.com/mashwork" target="_blank"><img src="/images/facebook-icon.svg" class="social-icon"/></a></li>
+    <li class="linkedin-link"><a href="https://www.linkedin.com/company/mashwork" target="_blank"><img src="/images/linkedin-icon.svg" class="social-icon"/></a></li>
   </ul>
   <p class="copyright">&copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; <a href="/privacy" target="_blank">Privacy Policy</a></p>
-  <p class="contact-info"><a href="https://goo.gl/maps/slKfo" target="_blank">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog" target="_blank">News</a></p><a href="http://wearemadeinny.com/" target="_blank" class="made-in-ny"><img src="http://mashwork.com/canvs/images/logos/made-in-ny-logo.svg"/></a>
+  <p class="contact-info"><a href="https://goo.gl/maps/slKfo" target="_blank">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog" target="_blank">News</a></p><a href="http://wearemadeinny.com/" target="_blank" class="made-in-ny"><img src="/images/logos/made-in-ny-logo.svg"/></a>
 </footer>
     
-<div tabindex="-1" role="dialog" aria-labelledby="contactModalTitle" aria-hidden="true" class="contactModal modal fade canvs-demo-form-modal">
+<div tabindex="-1" role="dialog" aria-labelledby="contactModalTitle" aria-hidden="true" class="contactModal modal fade canvs-demo-modal">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-controls-wrap">
@@ -131,9 +131,9 @@
         <div class="modal-center-wrap">
           <div class="modal-form-header">
             <h1 id="contactModalTitle" class="modal-title canvs-demo-form-title">Contact us for a Canvs demo.</h1>
-            <p class="section-description">All fields are mandatory.</p>
+            <p class="section-description canvs-demo-form-description">Please submit all fields.</p>
           </div>
-          <div id="mc_embed_signup" class="canvs-demo-form-wrap">
+          <div id="mc_embed_signup" class="form-wrap canvs-form-wrap">
             <form id="canvs-demo-form" action="http://mashwork.us6.list-manage.com/subscribe/post-json?u=27226eff753800aa4ae740776&amp;id=bfb67acc2a&amp;c=?" method="post" name="canvs-demo-form" novalidate="" class="validate form-horizontal">
               <div class="form-group form-name-group">  
                 <div class="mc-field-group">
@@ -167,7 +167,7 @@
               <div style="position: absolute; left: -5000px;">
                 <input type="text" name="b_27226eff753800aa4ae740776_bfb67acc2a" value=""/>
               </div>
-              <input id="mc-embedded-subscribe" type="submit" value="Request demo" name="subscribe" class="action-btn canvs-demo-form-submit"/>
+              <input id="mc-embedded-subscribe" type="submit" value="Request demo" name="request" class="action-btn canvs-demo-form-submit"/>
             </form>
           </div>
         </div>
