--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 
     
 <header class="hero-header">
-  <div class="container"><a href="http://canvs.tv/login" class="canvs-login">Login to Canvs<span class="login-icon"><img src="images/user-icon.svg"/></span></a>
+  <div class="container"><a href="http://app.canvs.tv" class="canvs-login">Login to Canvs<span class="login-icon"><img src="images/user-icon.svg"/></span></a>
     <div class="hero-header-content">
       <div class="branding-wrap">
         <p class="logo-introducing">Introducing</p><a href="/" class="canvs-logo-link"><img src="images/logos/canvs-logo-white.svg" class="canvs-logo"/>
@@ -104,7 +104,7 @@
       </div>
       <div class="content-box single-solution-box credible-box"><img src="images/beautiful-icon.svg" class="single-solution-illustration"/>
         <h2>Beautiful</h2>
-        <p><strong>Gone are crowded dashboards and illegible charts.  </strong>Canvs is clean, intuitive, and fun to use.</p>
+        <p><strong>Gone are crowded dashboards and illegible charts.  </strong>Functional design is one of our core values. As a result, Canvs is clean, intuitive, and fun to use.</p>
       </div>
     </div>
     <div class="row">
