--- a/app/index.html
+++ b/app/index.html
@@ -38,11 +38,11 @@
   <div class="container">
     <div class="row">
       <div class="content-box about-canvs-box stop-counting"><img src="images/stop-counting.svg" class="about-canvs-illustration"/>
-        <h2>Stop counting.</h2>
+        <h2>Stop counting</h2>
         <p><strong>You know how many people are talking about your show, but only Canvs can tell you why they’re talking about it. </strong>Canvs allows you to immediately identify the specific moments that drove audience reactions to your content. </p>
       </div>
       <div class="content-box about-canvs-box forget-sentiment"><img src="images/forget-sentiment.svg" class="about-canvs-illustration"/>
-        <h2>Forget sentiment.</h2>
+        <h2>Forget sentiment</h2>
         <p><strong>We know that social media sentiment tools aren’t accurate because we’ve used them all. </strong>We don’t even believe in positive, negative, and neutral sentiment. Canvs uncovers nuanced audience emotions and lets you decide what they mean for your show. </p>
       </div>
     </div>
@@ -129,7 +129,7 @@
     <li class="facebook-link"><a href="https://www.facebook.com/mashwork" target="_blank"><img src="/images/facebook-icon.svg" class="social-icon"/></a></li>
     <li class="linkedin-link"><a href="https://www.linkedin.com/company/mashwork" target="_blank"><img src="/images/linkedin-icon.svg" class="social-icon"/></a></li>
   </ul>
-  <p class="copyright">&copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; <a href="/privacy" target="_blank">Privacy Policy</a></p>
+  <p class="copyright">&copy; 2014 Mashwork, Inc. &nbsp;•&nbsp; All rights reserved. &nbsp;•&nbsp; <a href="http://app.canvs.tv/privacy" target="_blank">Privacy Policy</a></p>
   <p class="contact-info"><a href="https://goo.gl/maps/slKfo" target="_blank">11 W. 25th St, 7th Fl, New York, NY 10010</a>• <a href="tel:1-646-201-9124">646-201-9124</a>• <a href="/about">About Us </a>• <a href="http://mashwork.com/blog" target="_blank">News</a></p><a href="http://wearemadeinny.com/" target="_blank" class="made-in-ny"><img src="/images/logos/made-in-ny-logo.svg"/></a>
 </footer>
     
