--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,24 @@
     </div><a href="/files/Canvs_Info_Sheet.pdf" target="_blank" class="action-btn info-sheet-btn">Canvs Info Sheet</a>
   </div>
 </section>
+<section class="quotes-section">
+  <div class="container">
+    <div class="row">
+      <div class="content-box quote-box">
+        <blockquote><img src="images/quote-mark.svg" class="quote-mark"/>
+          <p class="quote-text">Canvs fills a gap in the social metrics landscape. No one else has easily understandable, manipulable, accurate sentiment analysis. Canvs is an intuitive platform that helps TV brands identify the most important reactions to their shows while also carving up the data to create actionable insights.</p>
+          <div class="quote-author-wrap"><span class="quote-author">JP Lespinasse</span><span class="quote-author-title">Senior Director, Social Media, BET</span></div>
+        </blockquote>
+      </div>
+      <div class="content-box quote-box">
+        <blockquote><img src="images/quote-mark.svg" class="quote-mark"/>
+          <p class="quote-text">Our franchises generate hundreds of thousands of mentions on Twitter each time they air. Canvs’s ability to organize those conversations into emotional themes is extremely valuable. It helps us tell the social story for our shows and saves my team countless hours of what would otherwise be an extremely manual task.</p>
+          <div class="quote-author-wrap"><span class="quote-author">Scott Calise</span><span class="quote-author-title">Director of Digital Research at Viacom, Comedy Central, and TV Land</span></div>
+        </blockquote>
+      </div>
+    </div>
+  </div>
+</section>
 <section class="single-solution-section">
   <div class="container">
     <div class="row">
