setting up news logos

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]--> 
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
 
     <meta name="google-site-verification" content="NRucHEjcZxCMR4NTLZJIpT0hHyW1RL7s4jI4I3X02NE">
 
-    <!-- Twitter Card Data --> 
+    <!-- Twitter Card Data -->
     <meta name="twitter:card" content="player">
     <meta name="twitter:site" content="@mashwork">
     <meta name="twitter:domain" content="mashwork.com">
@@ -24,9 +24,9 @@
     <meta name="twitter:player:width" content="640">
     <meta name="twitter:player:height" content="360">
 
-    <!-- Open Graph Data --> 
-    <meta property="og:title" content="Canvs – The qualitative Social TV solution."> 
-    <meta property="og:type" content="website"> 
+    <!-- Open Graph Data -->
+    <meta property="og:title" content="Canvs – The qualitative Social TV solution.">
+    <meta property="og:type" content="website">
     <meta property="og:url" content="http://canvs.tv/">
     <meta property="og:image" content="http://canvs.tv/images/canvs-video-poster.png">
     <meta property="og:description" content="Canvs is the first platform that automatically and transparently reveals the nuanced emotion around social TV conversation. Canvs was created by Mashwork, a leading social media insights firm.">
@@ -128,8 +128,18 @@
   <div class="container">
     <div class="row">
       <header class="section-header-wrap">
-        <h1 class="section-header">In the News</h1>
+        <h1 class="section-header">In the news</h1>
       </header>
+      <ul class="news-link-list">
+        <li class="news-link-item the-atlantic-news-link"><a href="http://bit.ly/PUZnGI" class="news-link"><img src="images/logos/the-atlantic-logo.png" title="The Atlantic" class="news-link-image"/></a></li>
+        <li class="news-link-item lost-remote-news-link"><a href="http://bit.ly/PUZnGI" class="news-link"><img src="images/logos/lost-remote-logo.png" title="Lost Remote" class="news-link-image"/></a></li>
+        <li class="news-link-item la-times-news-link"><a href="http://bit.ly/PUZnGI" class="news-link"><img src="images/logos/la-times-logo.svg" title="LA Times" class="news-link-image"/></a></li>
+        <li class="news-link-item wired-news-link"><a href="http://bit.ly/PUZnGI" class="news-link"><img src="images/logos/wired-logo.svg" title="Wired" class="news-link-image"/></a></li>
+        <li class="news-link-item variety-news-link"><a href="http://bit.ly/PUZnGI" class="news-link"><img src="images/logos/variety-logo.png" title="Variety" class="news-link-image"/></a></li>
+        <li class="news-link-item mashable-news-link"><a href="http://bit.ly/PUZnGI" class="news-link"><img src="images/logos/mashable-logo-black.png" title="Mashable" class="news-link-image"/></a></li>
+        <li class="news-link-item marketing-land-news-link"><a href="http://bit.ly/PUZnGI" class="news-link"><img src="images/logos/marketing-land-logo-black.svg" title="Marketing Land" class="news-link-image"/></a></li>
+        <li class="news-link-item dm-news-news-link"><a href="http://bit.ly/PUZnGI" class="news-link"><img src="images/logos/dm-news-logo.png" title="DM News" class="news-link-image"/></a></li>
+      </ul>
     </div>
   </div>
 </section>
@@ -141,27 +151,27 @@
       </header>
       <div class="content-box single-solution-box immediate-box"><img src="images/immediate-icon.svg" class="single-solution-illustration"/>
         <h2>Immediate</h2>
-        <p><strong>No more settling for shaky sentiment.<br> </strong>No more hours manually calculating it yourself. Canvs gives you immediate, actionable insights about how your audience feels with the click of a mouse.</p>
+        <p><strong>No more settling for shaky sentiment.<br></strong>No more hours manually calculating it yourself. Canvs gives you immediate, actionable insights about how your audience feels with the click of a mouse.</p>
       </div>
       <div class="content-box single-solution-box credible-box"><img src="images/credible-icon.svg" class="single-solution-illustration"/>
         <h2>Credible</h2>
-        <p><strong>Our pedigree speaks for itself.<br> </strong>Canvs was built by New York City’s best social TV analysts and data scientists as a tool for themselves. See what it can do for you. </p>
+        <p><strong>Our pedigree speaks for itself.<br></strong>Canvs was built by New York City’s best social TV analysts and data scientists as a tool for themselves. See what it can do for you. </p>
       </div>
     </div>
     <div class="row">
       <div class="content-box single-solution-box transparent-box"><img src="images/transparent-icon.svg" class="single-solution-illustration"/>
         <h2>Transparent</h2>
-        <p><strong>Canvs gives you visibility into all conversation. </strong>You can see that Canvs is really as good at categorizing reactions as we say it is.</p>
+        <p><strong>Canvs gives you visibility into all conversation.</strong>You can see that Canvs is really as good at categorizing reactions as we say it is.</p>
       </div>
       <div class="content-box single-solution-box credible-box"><img src="images/beautiful-icon.svg" class="single-solution-illustration"/>
         <h2>Beautiful</h2>
-        <p><strong>Gone are crowded dashboards and illegible charts.  </strong>Functional design is one of our core values. As a result, Canvs is clean, intuitive, and fun to use.</p>
+        <p><strong>Gone are crowded dashboards and illegible charts.</strong>Functional design is one of our core values. As a result, Canvs is clean, intuitive, and fun to use.</p>
       </div>
     </div>
     <div class="row">
       <div class="content-box single-solution-box intelligent-box"><img src="images/intelligent-icon.svg" class="single-solution-illustration"/>
         <h2>Intelligent</h2>
-        <p><strong>Canvs was conceived in 2010 by some of the best minds in data science.  </strong>Our expert analysts continually teach the platform the ever-evolving vernacular of social media. The result is a dynamically intelligent tool that reflects the way real people are talking right now.</p>
+        <p><strong>Canvs was conceived in 2010 by some of the best minds in data science.</strong>Our expert analysts continually teach the platform the ever-evolving vernacular of social media. The result is a dynamically intelligent tool that reflects the way real people are talking right now.</p>
       </div>
     </div>
     <button data-toggle="modal" data-target=".canvs-demo-modal" class="action-btn contact-demo-btn">Contact us for a Demo</button>
