improved quote sections

--- a/app/index.html
+++ b/app/index.html
@@ -108,7 +108,7 @@
     </div><a href="/files/Canvs_Info_Sheet.pdf" target="_blank" class="action-btn info-sheet-btn">Download Info Sheet</a>
   </div>
 </section>
-<section class="quote-section"><img src="images/about-hero-image.jpg" class="quote-image"/><a href="http://mklnd.com/TCufOQ" target="_blank" class="quote-link">
+<section class="quote-section"><img src="images/about-hero-image.jpg" class="quote-image"/><a href="http://mklnd.com/TCufOQ" target="_blank" class="quote-link marketing-land-link">
     <div class="quote-box">
       <div class="quote-logo"><img src="images/logos/marketing-land-logo-white.svg" class="quote-logo-image"/></div>
       <h4 class="quote-title">"Beyond Sentiment Analysis: Canvs Takes Instant Social Temperature Of TV Shows"</h4><span class="quote-read-more-link">Click to read more</span>
@@ -147,10 +147,10 @@
     <button data-toggle="modal" data-target=".canvs-demo-modal" class="action-btn contact-demo-btn">Contact us for a Demo</button>
   </div>
 </section>
-<section class="quote-section"><img src="images/about-hero-image.jpg" class="quote-image"/><a href="http://bit.ly/PUZnGI" target="_blank" class="quote-link">
+<section class="quote-section"><img src="images/about-hero-image.jpg" class="quote-image"/><a href="http://bit.ly/1o3bosF" target="_blank" class="quote-link">
     <div class="quote-box">
       <div class="quote-logo"><img src="images/logos/dm-news-logo-white.png" class="quote-logo-image"/></div>
-      <h4 class="quote-title">"Social TV Analytics That Go Beyond the Buzz-Numbers"</h4><span class="quote-read-more-link">Click to read more</span>
+      <h4 class="quote-title">"An impossible, and yet possible, real-time focus group of the masses."</h4><span class="quote-read-more-link">Click to read more</span>
     </div></a></section>
 <section class="in-the-news-section">
   <div class="container">
