added gradient overlays and improved x

--- a/app/about/index.html
+++ b/app/about/index.html
@@ -24,7 +24,8 @@
 
     
 <div class="about-content">
-  <header class="hero-header"><a href="http://app.canvs.tv/login" class="canvs-login">Login to Canvs<span class="login-icon"><img src="../images/user-icon.svg"/></span></a>
+  <header class="hero-header">
+    <div class="background-gradient"></div><a href="http://app.canvs.tv/login" class="canvs-login">Login to Canvs<span class="login-icon"><img src="../images/user-icon.svg"/></span></a>
     <div class="container">
       <div class="hero-header-content">
         <div class="branding-wrap">
