quote and advisor improvements

--- a/app/index.html
+++ b/app/index.html
@@ -157,17 +157,17 @@
   <div class="container">
     <div class="row">
       <header class="section-header-wrap">
-        <h1 class="section-header">In the news</h1>
+        <h1 class="section-header">According to Canvs</h1>
       </header>
       <ul class="news-link-list">
         <li class="news-link-item the-atlantic-news-link"><a href="http://bit.ly/PUZnGI" target="_blank" class="news-link"><img src="images/logos/the-atlantic-logo.png" class="news-link-image"/></a></li>
-        <li class="news-link-item lost-remote-news-link"><a href="http://ow.ly/ACs6K " target="_blank" class="news-link"><img src="images/logos/lost-remote-logo-black.png" class="news-link-image"/></a></li>
+        <li class="news-link-item lost-remote-news-link"><a href="http://ow.ly/ACs6K " target="_blank" class="news-link"><img src="images/logos/lost-remote-logo.png" class="news-link-image"/></a></li>
         <li class="news-link-item la-times-news-link"><a href="http://lat.ms/1qaruwR" target="_blank" class="news-link"><img src="images/logos/la-times-logo.svg" class="news-link-image"/></a></li>
         <li class="news-link-item wired-news-link"><a href="http://wrd.cm/1v2klGY" target="_blank" class="news-link"><img src="images/logos/wired-logo.svg" class="news-link-image"/></a></li>
         <li class="news-link-item variety-news-link"><a href="http://bit.ly/1pol9Am" target="_blank" class="news-link"><img src="images/logos/variety-logo.svg" class="news-link-image"/></a></li>
-        <li class="news-link-item mashable-news-link"><a href="http://on.mash.to/1zAnESD" target="_blank" class="news-link"><img src="images/logos/mashable-logo-black.png" class="news-link-image"/></a></li>
-        <li class="news-link-item marketing-land-news-link"><a href="http://mklnd.com/TCufOQ" target="_blank" class="news-link"><img src="images/logos/marketing-land-logo-black.svg" class="news-link-image"/></a></li>
-        <li class="news-link-item dm-news-news-link"><a href="http://bit.ly/1o3bosF" target="_blank" class="news-link"><img src="images/logos/dm-news-logo-black.png" class="news-link-image"/></a></li>
+        <li class="news-link-item mashable-news-link"><a href="http://on.mash.to/1zAnESD" target="_blank" class="news-link"><img src="images/logos/mashable-logo.png" class="news-link-image"/></a></li>
+        <li class="news-link-item marketing-land-news-link"><a href="http://mklnd.com/TCufOQ" target="_blank" class="news-link"><img src="images/logos/marketing-land-logo.svg" class="news-link-image"/></a></li>
+        <li class="news-link-item dm-news-news-link"><a href="http://bit.ly/1o3bosF" target="_blank" class="news-link"><img src="images/logos/dm-news-logo.png" class="news-link-image"/></a></li>
       </ul>
     </div>
   </div>
