--- a/app/about/index.html
+++ b/app/about/index.html
@@ -99,6 +99,14 @@
           <h2>Shaula Yemini, PhD</h2>
           <h3>Technical Advisor</h3>
         </div>
+        <div class="content-box greg-battle"><img src="../images/advisors/greg-battle.jpg" class="canvs-advisors-image"/>
+          <h2>Greg Battle</h2>
+          <h3>Advisor</h3>
+        </div>
+        <div class="content-box dean-callas"><img src="../images/advisors/dean-callas.jpg" class="canvs-advisors-image"/>
+          <h2>Dean Callas</h2>
+          <h3>Investor</h3>
+        </div>
       </div>
     </div>
   </section>
