--- a/app/about/index.html
+++ b/app/about/index.html
@@ -97,15 +97,15 @@
         </div>
         <div class="content-box shaula-yemini"><img src="../images/advisors/shaula-yemini.jpg" class="canvs-advisors-image"/>
           <h2>Shaula Yemini, PhD</h2>
-          <h3>Technical Advisor</h3>
+          <h3>Principal at SAY Ventures</h3>
         </div>
         <div class="content-box greg-battle"><img src="../images/advisors/greg-battle.jpg" class="canvs-advisors-image"/>
           <h2>Greg Battle</h2>
-          <h3>Advisor</h3>
+          <h3>Principal at Applico</h3>
         </div>
         <div class="content-box dean-callas"><img src="../images/advisors/dean-callas.jpg" class="canvs-advisors-image"/>
           <h2>Dean Callas</h2>
-          <h3>Investor</h3>
+          <h3>Investment Banker at Arbor Advisors</h3>
         </div>
       </div>
     </div>
