Redo press header

--- a/app/index.html
+++ b/app/index.html
@@ -157,7 +157,7 @@
   <div class="container">
     <div class="row">
       <header class="section-header-wrap">
-        <h1 class="section-header">Press Coverage</h1>
+        <h1 class="section-header">According to Canvs</h1>
       </header>
       <ul class="news-link-list">
         <li class="news-link-item the-atlantic-news-link"><a href="http://bit.ly/PUZnGI" target="_blank" class="news-link"><img src="images/logos/the-atlantic-logo.png" class="news-link-image"/></a></li>
