--- a/app/index.html
+++ b/app/index.html
@@ -128,7 +128,7 @@
       </div>
       <div class="content-box single-solution-box credible-box"><img src="images/credible-icon.svg" class="single-solution-illustration"/>
         <h2>Credible</h2>
-        <p><strong>Our pedigree speaks for itself. </strong>Canvs was built by New York City’s best social TV analysts and data scientists as a tool for themselves. See what it can do for you. </p>
+        <p><strong>Our experience speaks for itself. </strong>Canvs was built by New York City’s best social TV analysts and data scientists as a tool for themselves. See what it can do for you. </p>
       </div>
     </div>
     <div class="row">
@@ -144,11 +144,11 @@
     <div class="row">
       <div class="content-box single-solution-box intelligent-box"><img src="images/intelligent-icon.svg" class="single-solution-illustration"/>
         <h2>Intelligent</h2>
-        <p><strong>Canvs was conceived in 2010 by some of the best minds in data science. </strong>Our expert analysts continually teach the platform the ever-evolving vernacular of social media. The result is a dynamically intelligent tool that reflects the way real people are talking right now.</p>
+        <p><strong>Conceived by some of the best minds in data science. </strong>Our expert analysts continually teach the platform the ever-evolving vernacular of social media.</p>
       </div>
       <div class="content-box single-solution-box dynamic-box"><img src="images/intelligent-icon.svg" class="single-solution-illustration"/>
         <h2>Versatile</h2>
-        <p><strong>Canvs seamlessly adapts to your needs. </strong>Find insights from a single moment in an episode to a trend across a season.</p>
+        <p><strong>Canvs seamlessly adapts to your needs. </strong>View and export your data by time period, emotional filter, and search terms.</p>
       </div>
     </div>
     <button data-toggle="modal" data-target=".canvs-demo-modal" class="action-btn contact-demo-btn">Contact us for a Demo</button>
