added new versatile icon

--- a/app/index.html
+++ b/app/index.html
@@ -146,9 +146,9 @@
         <h2>Intelligent</h2>
         <p><strong>Conceived by some of the best minds in data science. </strong>Our expert analysts continually teach the platform the ever-evolving vernacular of social media.</p>
       </div>
-      <div class="content-box single-solution-box dynamic-box"><img src="images/intelligent-icon.svg" class="single-solution-illustration"/>
+      <div class="content-box single-solution-box versatile-box"><img src="images/versatile-icon.svg" class="single-solution-illustration"/>
         <h2>Versatile</h2>
-        <p><strong>Canvs seamlessly adapts to your needs. </strong>View and export your data by time period, emotional filter, and search terms.</p>
+        <p><strong>Canvs seamlessly adapts to your needs. </strong>Explore and export your data by time period, emotional filter, and search terms.</p>
       </div>
     </div>
     <button data-toggle="modal" data-target=".canvs-demo-modal" class="action-btn contact-demo-btn">Contact us for a Demo</button>
