--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
     <div class="row">
       <div class="content-box about-canvs-box stop-counting"><img src="images/stop-counting.svg" class="about-canvs-illustration"/>
         <h2>Context matters</h2>
-        <p><strong>Once you know how many people are talking about your show, you need to know why they’re talking about it. </strong>Canvs is the perfect complement to quantitate analysis because it allows you to identify the specific moments that drove audiences to react emotionally. </p>
+        <p><strong>Once you know how many people are talking about your show, you need to know why they’re talking about it. </strong>Canvs is the perfect complement to quantitative analysis because it allows you to identify the specific moments that drove audiences to react emotionally. </p>
       </div>
       <div class="content-box about-canvs-box forget-sentiment"><img src="images/forget-sentiment.svg" class="about-canvs-illustration"/>
         <h2>Forget sentiment</h2>
